some sane project1_demo

--- a/Project 1 - Demo.ipynb
+++ b/Project 1 - Demo.ipynb
@@ -48,6 +48,27 @@
     "\n",
     "plot_multiple_arrays([[im]], \"\", [\"Input Image\"]);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "project1_demo.main();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
